feat: implement Shift and Setting entities for anti-corruption system